@@ -94,21 +94,22 @@
         <setting id="channel_C5182B93-6B71-44BE-948F-0B74E6C2BAA6_videolandnl_username" type="text" label="30094" default="" visible="eq(-13,Videoland)" />
         <setting id="channel_C5182B93-6B71-44BE-948F-0B74E6C2BAA6_videolandnl_password" default="" visible="eq(-14,Videoland)" />
         <setting id="channel_C5182B93-6B71-44BE-948F-0B74E6C2BAA6_videolandnl_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_C5182B93-6B71-44BE-948F-0B74E6C2BAA6_videolandnl_password&amp;settingname=Videoland&amp;tabfocus=102)" option="close" visible="eq(-15,Videoland)" />
+        <setting id="channel_C5182B93-6B71-44BE-948F-0B74E6C2BAA6_filter_premium" type="select" lvalues="30126|30127|30128" default="0" label="30081" visible="eq(-16,Videoland)" />
         <!-- chn_vier.py -->
-        <setting id="viervijfzes_username" type="text" label="30094" default="" visible="eq(-16,Zes)|eq(-16,Vijf)|eq(-16,Vier)" />
-        <setting id="viervijfzes_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=viervijfzes_password&amp;settingname=Vier/Vijf/Zes.be password&amp;tabfocus=102)" option="close" visible="eq(-17,Zes)|eq(-17,Vijf)|eq(-17,Vier)" />
-        <setting id="viervijfzes_password" default="" visible="eq(-18,Zes)|eq(-18,Vijf)|eq(-18,Vier)" />
-        <setting id="viervijfzes_refresh_token" default="" visible="eq(-19,Zes)|eq(-19,Vijf)|eq(-19,Vier)" />
+        <setting id="viervijfzes_username" type="text" label="30094" default="" visible="eq(-17,Zes)|eq(-17,Vijf)|eq(-17,Vier)" />
+        <setting id="viervijfzes_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=viervijfzes_password&amp;settingname=Vier/Vijf/Zes.be password&amp;tabfocus=102)" option="close" visible="eq(-18,Zes)|eq(-18,Vijf)|eq(-18,Vier)" />
+        <setting id="viervijfzes_password" default="" visible="eq(-19,Zes)|eq(-19,Vijf)|eq(-19,Vier)" />
+        <setting id="viervijfzes_refresh_token" default="" visible="eq(-20,Zes)|eq(-20,Vijf)|eq(-20,Vier)" />
         <!-- chn_vrtnu.py -->
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_username" label="30094" type="text" default="" visible="eq(-20,VRT NU)" />
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_F530A9EC-3C0D-49B6-96C2-480273417460_password&amp;settingname=VRT NU password&amp;tabfocus=102)" option="close" visible="eq(-21,VRT NU)" />
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password" default="" visible="eq(-22,VRT NU)" />
-        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_hls_over_dash" label="30099" type="bool" default="" visible="eq(-23,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_username" label="30094" type="text" default="" visible="eq(-21,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=channel_F530A9EC-3C0D-49B6-96C2-480273417460_password&amp;settingname=VRT NU password&amp;tabfocus=102)" option="close" visible="eq(-22,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_password" default="" visible="eq(-23,VRT NU)" />
+        <setting id="channel_F530A9EC-3C0D-49B6-96C2-480273417460_hls_over_dash" label="30099" type="bool" default="" visible="eq(-24,VRT NU)" />
         <!-- chn_vtmbe.py -->
-        <setting id="mediaan_username" type="text" label="30094" default="" visible="eq(-24,Stievie)|eq(-24,VTM.be)" />
-        <setting id="mediaan_password" default="" visible="eq(-25,Stievie)|eq(-25,VTM.be)" />
-        <setting id="mediaan_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=mediaan_password&amp;settingname=Mediaan Wachtwoord.be&amp;tabfocus=102)" option="close" visible="eq(-26,Stievie)|eq(-26,VTM.be)" />
-        <setting id="mediaan_signature" default="" visible="eq(-27,Stievie)|eq(-27,VTM.be)" />
+        <setting id="mediaan_username" type="text" label="30094" default="" visible="eq(-25,Stievie)|eq(-25,VTM.be)" />
+        <setting id="mediaan_password" default="" visible="eq(-26,Stievie)|eq(-26,VTM.be)" />
+        <setting id="mediaan_password_set" label="30093" type="action" action="RunScript(plugin.video.retrospect, 0, ?action=encryptsetting&amp;settingid=mediaan_password&amp;settingname=Mediaan Wachtwoord.be&amp;tabfocus=102)" option="close" visible="eq(-27,Stievie)|eq(-27,VTM.be)" />
+        <setting id="mediaan_signature" default="" visible="eq(-28,Stievie)|eq(-28,VTM.be)" />
         <!-- end of channel settings -->
     </category>
 
